# pico-106

./: CMakeLists.txt  Makefile  README.md
Source/: CMakeLists.txt  DCO.h  Synth.h  Table_exp_24.py  Voice.h  a440.cpp  pico-106.cpp
